# lab2_sem3

./: ArraySequence.h  CMakeLists.txt  DynamicArray.h  GUI.h  ISorter.h  LinkedList.h  ListSequence.h  QuickSort.h  Sequence.h  Student.cpp  Student.h  Tests.cpp  Tests.h  UnqPtr.h  main.cpp
